fix: working on ios css bug

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
     width: 100vw;
     height: 100vh;
